objects/Extension_Request_Change_Control__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Extension_Request_Change_ControlcCMPL12</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Control__c</fullName>
        <label>Change Control</label>
        <referenceTo>CMPL123QMS__Change_Control__c</referenceTo>
        <relationshipLabel>Extension Requests Change Control</relationshipLabel>
        <relationshipName>Extension_Requests_Change_Control</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_Due_Date__c</fullName>
        <label>Current Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Due_Date__c</fullName>
        <label>Proposed Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_for_Extension__c</fullName>
        <label>Reason for Extension</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Extension Request Change Control</label>
    <nameField>
        <displayFormat>ER-CC-{00000}</displayFormat>
        <label>ER-CC No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extension Requests Change Control</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Proposed_Due_Date_cannot_be_in_the_past</fullName>
        <active>true</active>
        <errorConditionFormula>Proposed_Due_Date__c &lt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Proposed_Due_Date__c</errorDisplayField>
        <errorMessage>Proposed Due Date cannot be in the past.</errorMessage>
    </validationRules>
</CustomObject>